--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,9 +13,9 @@
     <title>{% block title %}NewBlog{% endblock %}</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <nav class="navbar navbar-expand-md navbar-light bg-light" style="background-color: silver;">
 
-      <a class="navbar-brand" href="{{ url_for('home') }}" style="font-family: Impact; color: darkcyan;">NewBlog</a>
+      <a class="navbar-brand" href="{{ url_for('home') }}" style="font: bold;">NewBlog</a>
       
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -24,21 +24,21 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('login') }}"><b>Login</b></a>
+            <a class="nav-link" href="{{ url_for('login') }}" style="font-family: Arial, Helvetica, sans-serif;"><b>Login</b></a>
           </li>
 
 
           {% if current_user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('create_post') }}"><b>New Post</b></a>
+            <a class="nav-link" href="{{ url_for('create_post') }}" style="font-family: Arial, Helvetica, sans-serif;"><b>New Post</b></a>
           </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('my_posts') }}"><b>My Posts</b></a>
+              <a class="nav-link" href="{{ url_for('my_posts') }}" style="font-family: Arial, Helvetica, sans-serif;"><b>My Posts</b></a>
             </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('logout') }}"><b>Logout</b></a>
+            <a class="nav-link" href="{{ url_for('logout') }}" style="font-family: Arial, Helvetica, sans-serif;"><b>Logout</b></a>
           </li>
           {% endif %}
         
@@ -62,7 +62,6 @@
     </div>
 
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
