--- a/app/templates/edit_post.html
+++ b/app/templates/edit_post.html
@@ -3,7 +3,7 @@
 {% block title %}Edit Post{% endblock %}
 
 {% block content %}
-  <h2>Edit Post</h2>
+  <h2 style="font-family: Arial, Helvetica, sans-serif; font: bold;">Edit Post</h2>
   <form method="POST">
     {{ form.hidden_tag() }}
     <div class="form-group">
@@ -16,5 +16,5 @@
     </div>
     <button type="submit" class="btn btn-primary">Save Changes</button>
   </form>
-  <a href="{{ url_for('post', post_id=post.id) }}" class="btn btn-secondary mt-2">Cancel</a>
+  <a href="{{ url_for('post', post_id=post.id) }}" class="btn btn-secondary mt-2" style="background-color: silver; font-weight: bold;">Cancel</a>
 {% endblock %}
