--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,7 +3,7 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-  <h2>Login</h2>
+  <h2 style="font-family: Arial, Helvetica, sans-serif; font: bold;">Login</h2>
   <form method="POST">
     {{ form.hidden_tag() }}
     <div class="form-group">
@@ -14,7 +14,7 @@
       {{ form.password.label(class="form-control-label") }}
       {{ form.password(class="form-control") }}
     </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-primary" style="background-color: silver; font-weight: bold; color: black;">Login</button>
   </form>
   <p>Don't have an account? <a href="{{ url_for('register') }}">Signup here</a></p>
 {% endblock %}
