--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -3,7 +3,7 @@
 {% block title %}Sign up{% endblock %}
 
 {% block content %}
-  <h2>Sign Up</h2>
+  <h2 style="font-family: Arial, Helvetica, sans-serif; font: bold;">Sign Up</h2>
   <form method="POST">
     {{ form.hidden_tag() }}
     <div class="form-group">
@@ -22,7 +22,7 @@
       {{ form.confirm_password.label(class="form-control-label") }}
       {{ form.confirm_password(class="form-control") }}
     </div>
-    <button type="submit" class="btn btn-primary">Sign up</button>
+    <button type="submit" class="btn btn-primary" style="background-color: silver; font-weight: bold; color: black;">Sign up</button>
   </form>
   <p>Already have an account? <a href="{{ url_for('login') }}">Log in here</a></p>
 {% endblock %}
